--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://cappyhackky.github.io/task-management-react-app/",
   "name": "task-manager",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
